fix dev and hamburguer menu icon on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -150,6 +150,12 @@ header {
           align-items: center;
 }
 
+.left-nav-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .left-nav-elements {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -248,6 +254,7 @@ header {
           align-items: center;
   -webkit-transition-duration: 0.2s ease-in;
           transition-duration: 0.2s ease-in;
+  margin-right: 8px;
 }
 
 .hamburguer-menu-container:hover {
